# doctest1234

./: .copier-answers.yml  404.html  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  sitemap.xml
.github/workflows/: publish-docs.yml  publish.yml
docs/: index.md
src/chdoctest20240826/: __init__.py
tests/: test_chdoctest20240826.py
